Update title and content for club fitting dispersion
My Golf Dispersion from Fitting

--- a/d3-test.html
+++ b/d3-test.html
@@ -3,63 +3,385 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>D3 Quick Test</title>
+  <title>Club Fitting Dispersion (Sidespin vs Carry)</title>
+  <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
   <style>
     body { font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; padding: 24px; }
-    #chart { max-width: 760px; }
+    h1 { margin: 0 0 6px; }
+    .sub { color: #555; margin: 0 0 18px; }
+    .controls { display: flex; flex-wrap: wrap; gap: 10px; align-items: center; margin: 14px 0 12px; }
+    select, button { font: inherit; padding: 8px 10px; }
+    button { cursor: pointer; border: 1px solid #ccc; background: #fff; border-radius: 10px; }
+    button.active { border-color: #111; }
+    .stats { margin: 10px 0 14px; padding: 12px; border: 1px solid #e5e5e5; border-radius: 12px; background: #fafafa; }
+    .hint { color:#666; font-size: 13px; margin-top: 8px; }
+    svg { width: min(980px, 100%); height: auto; border: 1px solid #eee; border-radius: 14px; background: #fff; }
+    .axis path, .axis line { stroke: #ccc; }
+    .grid line { stroke: #eee; }
+    .zero-line { stroke: #999; stroke-dasharray: 4 4; }
+    .dot { opacity: 0.72; }
+    .dot:hover { opacity: 1; }
+    .tooltip {
+      position: fixed; pointer-events: none;
+      background: rgba(0,0,0,0.85); color: #fff;
+      padding: 8px 10px; border-radius: 10px;
+      font-size: 12px; line-height: 1.2;
+      transform: translate(10px, 10px);
+      max-width: 280px;
+      display: none;
+    }
   </style>
 </head>
 <body>
-  <h1>D3 Quick Test</h1>
-  <p>If you see bars below, D3 is working.</p>
-  <div id="chart"></div>
+  <h1>Club Fitting Dispersion</h1>
+  <p class="sub">Dispersion proxy: <b>Sidespin (RPM)</b> vs <b>Carry (YDS)</b>. Filter by club type and inspect consistency.</p>
 
-  <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
-  <script>
-    const data = [
-      { label: "Driver", value: 240 },
-      { label: "7i", value: 155 },
-      { label: "PW", value: 120 },
-      { label: "56°", value: 85 }
-    ];
+  <div class="controls">
+    <span><b>Club type:</b></span>
+    <button id="btnAll" class="active" data-type="All">All</button>
+    <button data-type="Driver">Driver</button>
+    <button data-type="Iron">Iron</button>
+    <button data-type="Other">Other</button>
 
-    const width = 720;
-    const barH = 28;
-    const height = data.length * (barH + 10) + 40;
+    <span style="margin-left:10px"><b>Club model:</b></span>
+    <select id="clubSelect"></select>
 
-    const svg = d3.select("#chart")
-      .append("svg")
-      .attr("viewBox", `0 0 ${width} ${height}`);
+    <button id="resetBtn" title="Reset zoom-ish (rebuild scales)">Reset View</button>
+  </div>
 
-    const x = d3.scaleLinear()
-      .domain([0, d3.max(data, d => d.value)])
-      .range([0, width - 160]);
+  <div class="stats" id="stats"></div>
 
-    const g = svg.append("g").attr("transform", "translate(140,20)");
+  <svg id="viz" viewBox="0 0 980 520" role="img" aria-label="Scatter plot of sidespin vs carry"></svg>
+  <div class="hint">Tip: Hover dots for details. Outliers (bad strikes) will be obvious—later we can add “exclude mishits” rules.</div>
 
-    g.selectAll("rect")
-      .data(data)
-      .join("rect")
-      .attr("y", (d,i) => i * (barH + 10))
-      .attr("height", barH)
-      .attr("width", d => x(d.value));
+  <div class="tooltip" id="tip"></div>
 
-    g.selectAll("text.value")
-      .data(data)
-      .join("text")
-      .attr("class","value")
-      .attr("x", d => x(d.value) + 8)
-      .attr("y", (d,i) => i * (barH + 10) + barH/2 + 5)
-      .text(d => d.value);
+<script>
+// ---------------
+// 1) Paste data here (TSV). You can replace this string with your full 125 rows.
+  Club	 Ball	 Ball Speed (MPH)	 Launch Angle (degrees)	 Backspin (RPM)	 Sidespin (RPM) 	 Carry (YDS) 	 Total (YDS)
+Iron	 Standard	103.6	20.1	6193	-623	141.1	151.2
+Iron	 Standard	86.9	21.4	4295	-198	113.9	126.8
+Iron	 Standard	114.2	24	5835	-684	158.3	168.2
+Iron	 Standard	95.6	20.5	5514	1627	126.6	137.7
+Iron	 Standard	100.3	27.4	7124	101	131	138.3
+Iron	 Standard	107.4	22.6	6448	-119	146.7	155.7
+Iron	 Standard	95.3	20.9	4313	-318	131.1	144.2
+Iron	 Standard	104.2	21.1	7548	-140	139.1	147.1
+Iron	 Standard	98.6	15	3620	1154	131.1	148.2
+Quantum Max KBS 90S	 Standard	112.2	21.2	4712	-345	162.1	173.8
+Quantum Max KBS 90S	 Standard	108.7	21.3	4286	-337	157.9	170.5
+Quantum Max KBS 90S	 Standard	108.8	22.3	5659	860	151.2	160.9
+Quantum Max KBS 90S	 Standard	104.1	13.7	3867	2201	134.2	150.2
+Quantum Max KBS 90S	 Standard	107	14.5	3329	-3730	127.7	144
+Quantum Max KBS 90S	 Standard	95.2	17.3	2311	-546	131.8	153.4
+Quantum Max KBS 90S	 Standard	110.5	21.5	5233	417	156.5	167.4
+Quantum Max KBS 90S	 Standard	109.5	8.9	5176	498	142.1	160.3
+Quantum Project X 6.0	 Standard	91.1	15.5	3975	6681	90.6	103.6
+Quantum Project X 6.0	 Standard	97.4	19.4	2955	-513	139	156.5
+Quantum Project X 6.0	 Standard	112.9	18.5	4117	-689	165.9	179.4
+Quantum Project X 6.0	 Standard	85.3	11.4	520	-1299	64.6	102.3
+Quantum Project X 6.0	 Standard	105	12.4	3503	-1596	137.2	157.3
+Quantum Project X 6.0	 Standard	118.2	19.8	5163	-349	170.5	181.8
+Quantum Project X 6.0	 Standard	107.8	16	4145	-1317	151.3	165.7
+Quantum Project X 6.0	 Standard	122.3	22	5915	342	171.8	181.9
+Quantum Project X 6.0	 Standard	59.2	11.9	749	-15	36.2	70.5
+Quantum Project X 6.0	 Standard	71.4	10.6	1692	-1285	51.6	85.7
+Quantum Project X 6.0	 Standard	48.7	34.1	4549	-8877	40.8	44.8
+Quantum Project X 6.0	 Standard	90.6	13.1	816	-1347	86	118.4
+Quantum Project X 6.0	 Standard	85.3	14	709	-1461	77	106.1
+Quantum Project X 6.0	 Standard	115.6	4.9	4971	533	142.5	167.1
+Quantum Project X 6.0	 Standard	123.6	13.4	4683	-1161	179.1	193.3
+Quantum KBS 120S	 Standard	101.6	18.3	4916	-576	140.4	153.2
+Quantum KBS 120S	 Standard	97.7	14.4	1486	-2431	104.2	128.5
+Quantum KBS 120S	 Standard	114.1	14.4	4705	-2092	156.8	170.6
+Quantum KBS 120S	 Standard	114.4	14.4	3814	-1696	161.2	177.6
+Quantum KBS 120S	 Standard	110.5	24.8	5595	786	153	162.8
+Quantum KBS 120S	 Standard	104.2	21.8	3559	541	152.8	166.5
+Quantum KBS 120S	 Standard	121	14.7	4527	-2063	170.9	184.7
+quantum px 6.0 std lie	 Standard	111.2	22.4	5285	392	157.1	167.9
+quantum px 6.0 std lie	 Standard	112	19.7	3906	-969	164.8	178.2
+quantum px 6.0 std lie	 Standard	121.2	18	5619	-257	173.7	184.6
+quantum px 6.0 std lie	 Standard	114.4	19.4	3981	-868	169.3	183.6
+quantum px 6.0 std lie	 Standard	70.5	6.3	403	-1023	26.5	72.2
+Quantum DGs300 std lie	 Standard	85.6	13.6	968	-1487	80	112.7
+Quantum DGs300 std lie	 Standard	107.9	20.5	3353	-561	161.1	176
+Quantum DGs300 std lie	 Standard	104	21.4	6127	3005	137.4	146.1
+Quantum DGs300 std lie	 Standard	118.1	19.3	5371	-187	169.4	180.3
+Quantum DGs300 std lie	 Standard	106	18	2713	-579	158.1	177.5
+Quantum DGs300 std lie	 Standard	115.9	16.8	6091	319	162.6	172.9
+Quantum DGs300 std lie	 Standard	101.2	22.2	7089	3428	130.9	138.4
+Quantum DGs300 std lie	 Standard	77.9	8.7	2504	-3086	52.1	85.4
+Quantum DGs300 std lie	 Standard	107	18.2	4574	39	152.7	166.8
+G440 	 Standard	115.6	16	5220	-1380	163.1	174.9
+G440 	 Standard	73.1	10.9	161	117	43	84
+G440 	 Standard	96.1	0.4	2339	3213	6.9	100.8
+G440 	 Standard	113.9	18	5548	108	161.6	172.9
+G440 	 Standard	107.9	12.7	5780	1301	144	157.5
+G440 	 Standard	87.4	3.5	360	-173	24.1	93.7
+G440 	 Standard	121.6	12.9	4628	-1753	171.7	186
+G440 	 Standard	117.4	9.4	5244	562	160.3	175.8
+G440 	 Standard	126.8	16	4685	-1432	185.3	197.5
+G440 	 Standard	132.9	17	5380	-690	193.7	205.1
+G440 	 Standard	118.3	16.8	3860	-1139	175.5	189.7
+G440 	 Standard	121.5	16.1	4016	-1972	175	189.4
+G440 	 Standard	125.7	21.2	5188	-1197	180.4	191.4
+G440 Project 6.5	 Standard	101.9	13.7	2296	-1272	133.2	157.4
+G440 Project 6.5	 Standard	89	17.1	4378	1039	112.7	127.2
+G440 Project 6.5	 Standard	119.7	15.2	3390	-1418	176.8	194
+G440 Project 6.5	 Standard	115.6	14.5	3637	-1664	164.5	179.6
+G440 Project 6.5	 Standard	93.8	23.8	4131	603	129.5	142.1
+G440 Project 6.5	 Standard	122.9	18.5	5863	-365	175	185.5
+G440 Project 6.5	 Standard	113.9	22.2	5634	1012	159.5	169.6
+ZXi5 px 6.5 2up	 Standard	118.4	15.5	4648	-1907	167.5	180.3
+ZXi5 px 6.5 2up	 Standard	119.8	20.1	4999	-1234	172.4	184
+T250 	 Standard	107.5	13.6	3857	-1783	144.4	160.9
+T250 	 Standard	108.3	21.6	5883	698	150	159.9
+T250 	 Standard	106.6	7.7	3518	-473	131.2	158.7
+T250 	 Standard	103.7	12	2926	-2577	121.4	142.1
+T250 	 Standard	122.5	14.2	3740	-3539	159.8	174.2
+T250 	 Standard	110.4	9.7	4678	-3031	133.6	150.9
+T250 	 Standard	123.9	16.8	4909	-630	181.6	193.9
+T250 	 Standard	117.5	15.8	4382	-1313	169.8	183.3
+T250 	 Standard	129.1	14.2	4941	-1451	187.3	199.8
+T250 	 Standard	124.1	14.4	4288	-1982	177.5	192
+T250 	 Standard	116.8	12.1	5665	-979	161.7	174.6
+T250 	 Standard	119.9	14.4	4691	-3975	154.7	166.8
+T250 	 Standard	109.8	15.2	3978	-1632	153.2	169.3
+T250 	 Standard	81	14.2	2784	-2398	80.9	103.3
+T250 	 Standard	75.2	16.4	1426	-1292	74.4	99.5
+T250 	 Standard	82.9	11.7	1253	-1777	69.1	102.8
+T250 	 Standard	119.5	18.2	6694	866	165.8	174.8
+T250 	 Standard	124.9	15.8	5391	-602	180.8	192.5
+T250 	 Standard	117.5	15.4	3799	-1327	171.6	187.4
+T250 	 Standard	126	14.6	4177	-2042	181.1	195.2
+T250 	 Standard	116.5	15.6	4376	-1496	167	181
+T250 	 Standard	94	11.1	1988	-1751	96.7	126.2
+T250 	 Standard	128.1	16.9	5214	-1078	186	197.9
+T250 	 Standard	119.4	13.3	4743	-1226	170.3	184.9
+g440 Red dor	 Standard	111.5	16.6	3960	-846	162.1	176.7
+g440 Red dor	 Standard	84.5	17.7	1470	111	106.5	129.3
+g440 Red dor	 Standard	81.4	12.2	885	-1480	66	99.3
+g440 Red dor	 Standard	123.3	12.7	4017	-2390	170.4	185.6
+g440 Red dor	 Standard	116.5	14.1	4772	-1726	163.2	177.6
+g440 Red dor	 Standard	120.8	14.4	4841	-1029	174.3	187.5
+g440 Red dor	 Standard	121.2	17.2	4065	-1616	177.5	191.8
+g440 Red dor	 Standard	111.2	14.8	2792	-2068	150.6	169.3
+g440 Red dor	 Standard	123.3	17.8	5256	-674	178.5	190.1
+g440 Red dor	 Standard	118.6	17.5	5654	-1045	168.2	178.8
+g440 Red dor	 Standard	117.2	19	5199	-96	168.8	180.2
+g440 Red dor	 Standard	96	15.2	818	-1575	102.5	136.1
+g440 Red dor	 Standard	96.5	15.4	2280	-3008	108.5	128.3
+g440 Red dor	 Standard	122.9	22.2	6703	979	168.5	177.1
+g440 Red dor	 Standard	113.6	17.3	3589	-1764	163.2	178.3
+g440 Red dor	 Standard	139	12.8	483	-1206	167.2	210.3
+g440 Red dor	 Standard	146.4	18.9	4132	1780	218.6	230.9
+Driver	 Standard	135.4	13.1	1940	-659	222.1	249.8
+Driver	 Standard	141.5	0	1334	-2054	0	175.8
+Driver	 Standard	148.3	7.4	1568	-1116	199.3	236.9
+Driver	 Standard	140.2	19.1	3352	564	224.8	240.9
+Driver	 Standard	148.5	12.3	2042	-1111	241.3	263.9
+Driver	 Standard	26	38.7	4536	-1545	14.1	17.3
+Driver	 Standard	143	16.9	2201	-1235	235.8	255
+Driver	 Standard	142.8	15	1556	-2994	185.1	203.8
+// ---------------
+const rawTSV = `Club\tBall\tBall Speed (MPH)\tLaunch Angle (degrees)\tBackspin (RPM)\tSidespin (RPM)\tCarry (YDS)\tTotal (YDS)
+Iron\tStandard\t103.6\t20.1\t6193\t-623\t141.1\t151.2
+Iron\tStandard\t86.9\t21.4\t4295\t-198\t113.9\t126.8
+Iron\tStandard\t114.2\t24\t5835\t-684\t158.3\t168.2
+Quantum Max KBS 90S\tStandard\t112.2\t21.2\t4712\t-345\t162.1\t173.8
+Quantum Project X 6.0\tStandard\t118.2\t19.8\t5163\t-349\t170.5\t181.8
+G440 \tStandard\t132.9\t17\t5380\t-690\t193.7\t205.1
+T250 \tStandard\t123.9\t16.8\t4909\t-630\t181.6\t193.9
+Driver\tStandard\t148.5\t12.3\t2042\t-1111\t241.3\t263.9
+Driver\tStandard\t143\t16.9\t2201\t-1235\t235.8\t255
+Driver\tStandard\t142.8\t15\t1556\t-2994\t185.1\t203.8`;
 
-    g.selectAll("text.label")
-      .data(data)
-      .join("text")
-      .attr("class","label")
-      .attr("x", -10)
-      .attr("y", (d,i) => i * (barH + 10) + barH/2 + 5)
-      .attr("text-anchor","end")
-      .text(d => d.label);
-  </script>
+// ---- parsing / cleaning
+const rows = d3.tsvParse(rawTSV.trim());
+
+function toNum(v) {
+  if (v == null) return NaN;
+  const x = String(v).trim();
+  if (x === "" || x.toLowerCase() === "nan") return NaN;
+  return +x;
+}
+
+function clubType(clubName) {
+  const c = (clubName || "").toLowerCase().trim();
+  if (c === "driver" || c.includes("driver")) return "Driver";
+  if (c === "iron" || c.includes("iron")) return "Iron";
+  // "Quantum...", "G440", "T250", etc.
+  return "Other";
+}
+
+const data = rows.map(r => ({
+  club: (r["Club"] ?? "").trim(),
+  ball: (r["Ball"] ?? "").trim(),
+  ballSpeed: toNum(r["Ball Speed (MPH)"]),
+  launch: toNum(r["Launch Angle (degrees)"]),
+  backspin: toNum(r["Backspin (RPM)"]),
+  sidespin: toNum(r["Sidespin (RPM)"]),
+  carry: toNum(r["Carry (YDS)"]),
+  total: toNum(r["Total (YDS)"]),
+})).filter(d =>
+  d.club && Number.isFinite(d.sidespin) && Number.isFinite(d.carry)
+);
+
+data.forEach(d => d.type = clubType(d.club));
+
+// ---- UI state
+let activeType = "All";
+let activeClub = "All";
+
+// ---- build club dropdown
+const clubSelect = d3.select("#clubSelect");
+const uniqueClubs = Array.from(new Set(data.map(d => d.club))).sort((a,b)=>a.localeCompare(b));
+clubSelect
+  .selectAll("option")
+  .data(["All", ...uniqueClubs])
+  .join("option")
+  .attr("value", d => d)
+  .text(d => d);
+
+clubSelect.on("change", (e) => {
+  activeClub = e.target.value;
+  render();
+});
+
+d3.selectAll("button[data-type]").on("click", function() {
+  d3.selectAll("button[data-type]").classed("active", false);
+  d3.select(this).classed("active", true);
+  activeType = this.getAttribute("data-type");
+  // if you filter type, keep club selection but it may yield empty; that's fine.
+  render();
+});
+
+d3.select("#resetBtn").on("click", () => render());
+
+// ---- chart scaffolding
+const svg = d3.select("#viz");
+const tip = d3.select("#tip");
+
+const margin = { top: 24, right: 26, bottom: 54, left: 72 };
+const W = 980, H = 520;
+const iw = W - margin.left - margin.right;
+const ih = H - margin.top - margin.bottom;
+
+const g = svg.append("g").attr("transform", `translate(${margin.left},${margin.top})`);
+
+g.append("g").attr("class", "grid");
+g.append("g").attr("class", "x axis").attr("transform", `translate(0,${ih})`);
+g.append("g").attr("class", "y axis");
+
+g.append("line")
+  .attr("class", "zero-line")
+  .attr("y1", 0).attr("y2", ih);
+
+g.append("text")
+  .attr("x", iw/2).attr("y", ih + 44)
+  .attr("text-anchor", "middle")
+  .text("Sidespin (RPM)  ← left / right →");
+
+g.append("text")
+  .attr("x", -ih/2).attr("y", -48)
+  .attr("transform", "rotate(-90)")
+  .attr("text-anchor", "middle")
+  .text("Carry (YDS)");
+
+function subset() {
+  return data.filter(d => {
+    const okType = (activeType === "All") || (d.type === activeType);
+    const okClub = (activeClub === "All") || (d.club === activeClub);
+    return okType && okClub;
+  });
+}
+
+function summarize(arr) {
+  const n = arr.length;
+  if (!n) return null;
+  const meanCarry = d3.mean(arr, d => d.carry);
+  const sdCarry = Math.sqrt(d3.mean(arr, d => (d.carry - meanCarry) ** 2));
+  const meanSide = d3.mean(arr, d => d.sidespin);
+  const sdSide = Math.sqrt(d3.mean(arr, d => (d.sidespin - meanSide) ** 2));
+  const meanBS = d3.mean(arr, d => d.ballSpeed);
+  return { n, meanCarry, sdCarry, meanSide, sdSide, meanBS };
+}
+
+function render() {
+  const arr = subset();
+
+  // stats box
+  const s = summarize(arr);
+  d3.select("#stats").html(s ? `
+    <div><b>Rows:</b> ${s.n}</div>
+    <div><b>Carry:</b> mean ${s.meanCarry.toFixed(1)} yds · SD ${s.sdCarry.toFixed(1)} yds</div>
+    <div><b>Sidespin:</b> mean ${s.meanSide.toFixed(0)} rpm · SD ${s.sdSide.toFixed(0)} rpm</div>
+    <div><b>Ball speed:</b> mean ${s.meanBS.toFixed(1)} mph</div>
+    <div class="hint"><b>Filter:</b> Type = ${activeType} · Club = ${activeClub}</div>
+  ` : `<b>No rows match this filter.</b> Try Type=All and Club=All.`);
+
+  // robust domains (pad a bit)
+  const xExtent = d3.extent(arr.length ? arr : data, d => d.sidespin);
+  const yExtent = d3.extent(arr.length ? arr : data, d => d.carry);
+
+  const xPad = Math.max(200, (xExtent[1] - xExtent[0]) * 0.12);
+  const yPad = Math.max(5, (yExtent[1] - yExtent[0]) * 0.12);
+
+  const x = d3.scaleLinear()
+    .domain([xExtent[0] - xPad, xExtent[1] + xPad])
+    .range([0, iw]);
+
+  const y = d3.scaleLinear()
+    .domain([yExtent[0] - yPad, yExtent[1] + yPad])
+    .range([ih, 0]);
+
+  // gridlines
+  g.select(".grid")
+    .call(d3.axisLeft(y).ticks(8).tickSize(-iw).tickFormat(""));
+
+  // axes
+  g.select(".x.axis").call(d3.axisBottom(x).ticks(10));
+  g.select(".y.axis").call(d3.axisLeft(y).ticks(8));
+
+  // zero line (sidespin = 0)
+  g.select(".zero-line")
+    .attr("x1", x(0))
+    .attr("x2", x(0));
+
+  // dots
+  const dots = g.selectAll("circle.dot")
+    .data(arr, (d,i) => `${d.club}-${i}-${d.carry}-${d.sidespin}`);
+
+  dots.join(
+    enter => enter.append("circle")
+      .attr("class", "dot")
+      .attr("r", 5.5)
+      .attr("cx", d => x(d.sidespin))
+      .attr("cy", d => y(d.carry))
+      .attr("fill", "#2a6f97")
+      .on("mousemove", (event, d) => {
+        tip.style("display", "block")
+          .style("left", `${event.clientX}px`)
+          .style("top", `${event.clientY}px`)
+          .html(`
+            <div><b>${d.club}</b> (${d.type})</div>
+            <div>Carry: ${d.carry.toFixed(1)} yds</div>
+            <div>Sidespin: ${d.sidespin.toFixed(0)} rpm</div>
+            <div>Ball speed: ${Number.isFinite(d.ballSpeed) ? d.ballSpeed.toFixed(1) : "—"} mph</div>
+            <div>Backspin: ${Number.isFinite(d.backspin) ? d.backspin.toFixed(0) : "—"} rpm</div>
+          `);
+      })
+      .on("mouseleave", () => tip.style("display", "none")),
+    update => update
+      .transition().duration(200)
+      .attr("cx", d => x(d.sidespin))
+      .attr("cy", d => y(d.carry)),
+    exit => exit.remove()
+  );
+}
+
+render();
+</script>
 </body>
 </html>
