--- a/fitting-dispersion.html
+++ b/fitting-dispersion.html
@@ -21,7 +21,7 @@ const svg = d3.select("#chart")
   .attr("width", width)
   .attr("height", height);
 
-d3.csv("data/fitting.csv").then(data => {
+d3.csv("fitting.csv").then(data => {
 
   data = data.map(d => ({
     club: d.Club.trim(),
